--- a/app/templates/errors/403.html
+++ b/app/templates/errors/403.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}500 - Internal Server Error{% endblock %}
+{% block title %}403 - Forbidden Error{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-   <h1>500 ERROR!</h1>
+   <h1>403 FORBIDDEN!</h1>
 </div>
 {% endblock %}
